force-app/main/default/objects/leaseworks__Applied_To__c/leaseworks__Applied_To__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_NotDeletable_2012 Applied To</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_NotDeletable_2012 Applied To</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>