force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>