force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Note__c</fullName>
    <label>Credit Note</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Applied To</relationshipLabel>
    <relationshipName>Invoice_Reference</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>