force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>leaseworks__Invoice__c.leaseworks__Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Aircraft MR, Assembly MR</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit Note MR</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Invoice__c.leaseworks__Invoice_Type__c</field>
            <operation>equals</operation>
            <value>Rent</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit Note Rent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Applied To (Invoice)</relationshipLabel>
    <relationshipName>Invoice_Reference1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>