force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Paid_Amount__c</fullName>
    <formula>leaseworks__Invoice__r.leaseworks__Amount_Paid_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>