force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Maint_Reserve_Heavy_Maint_2_Airframe__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maint_Reserve_Heavy_Maint_2_Airframe__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maintenance reserve for heavy maintenance 2</description>
    <inlineHelpText>Maintenance reserve for heavy maintenance 2</inlineHelpText>
    <label>Heavy Maint 2 Airframe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>