force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Maintenance_Reserve_APU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_APU__c</fullName>
    <defaultValue>0</defaultValue>
    <label>APU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>