force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Maintenance_Reserve_LG_Nose__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_LG_Nose__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Landing Gear - Nose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>