force-app/main/default/objects/leaseworks__Applied_To__c/fields/leaseworks__Maintenance_Reserve_Propeller_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Propeller_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MR for Propeller 2</description>
    <inlineHelpText>MR for Propeller 2</inlineHelpText>
    <label>Propeller 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>