force-app/main/default/objects/leaseworks__Applied_To__c/recordTypes/leaseworks__Credit_Note_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Note_MR</fullName>
    <active>true</active>
    <label>Credit Note MR</label>
</RecordType>