force-app/main/default/objects/leaseworks__Applied_To__c/recordTypes/leaseworks__Credit_Note_Rent.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Note_Rent</fullName>
    <active>true</active>
    <label>Credit Note Rent</label>
</RecordType>