force-app/main/default/objects/leaseworks__Applied_To__c/validationRules/leaseworks__CreditNoteValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreditNoteValidation</fullName>
    <active>true</active>
    <errorConditionFormula>false /*AND( OR(contains( Text(Credit_Note__r.Invoice_Type__c) , &apos;Credit Note MR&apos;), contains(Text(Credit_Note__r.Invoice_Type__c) , &apos;Credit Note Rent&apos;) )
  ,   Credit_Note__r.Total_Applied_Amount__c &gt; Credit_Note__r.Total_Funded_Amount__c 
 )*/</errorConditionFormula>
    <errorMessage>Total Applied amount cannot be greater than Funded With amount.</errorMessage>
</ValidationRule>