force-app/main/default/objects/leaseworks__Applied_To__c/validationRules/leaseworks__InvoiceRefShouldNotBeOverpaid.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceRefShouldNotBeOverpaid</fullName>
    <active>true</active>
    <errorConditionFormula>and ( or (ISNEW() , ISCHANGED(leaseworks__Invoice__c)) , leaseworks__Invoice__r.leaseworks__Balance_Due__c  &lt;=0 )</errorConditionFormula>
    <errorDisplayField>leaseworks__Invoice__c</errorDisplayField>
    <errorMessage>Applied To Invoice should have a balance due.</errorMessage>
</ValidationRule>