force-app/main/default/objects/leaseworks__Applied_To__c/validationRules/leaseworks__Total_Invoice_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Total_Invoice_Amount_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(leaseworks__Credit_Amount__c &lt;=0, and ( leaseworks__Type_F__c = &apos;Credit Note Rent&apos; , isBlank(leaseworks__Credit_Amount__c ) )
)</errorConditionFormula>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>